--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ Beyond the code, I embrace a "Live Life King-Size" philosophy. When I'm not imme
                       <article>
                         <div class="card-header">
                           <div class="card-header-info">
-                            <p>High School (Equivalent)</p>
+                            <p>Secondary School (Equivalent)</p>
                             <p>Kennedy High the Global school, Bachupally, Hyderabad </p>
                           </div>
                           <span>2019-2020</span>
